# code_base_navigator

./: .gitignore  README.md  config.py  main.py  pyproject.toml
codebase_navigator/: scanner.py
core/: scanner.py
core/RAG/: chunking.py  embedding_chunking.py
core/agents/: introduction_agent.py
